--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.14",
+    "@material-ui/core": "^5.0.0-alpha.29",
+    "@material-ui/icons": "^5.0.0-alpha.28",
+    "@material-ui/styles": "^5.0.0-alpha.29",
     "@tshio/security-client": "^0.0.20",
     "apollo-server-fastify": "3.0.0-alpha.3",
     "awilix": "^4.3.3",
@@ -57,6 +60,8 @@
     "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
     "@babel/preset-typescript": "7.9.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@graphql-codegen/add": "2.0.2",
     "@graphql-codegen/cli": "1.21.3",
     "@graphql-codegen/import-types-preset": "1.18.1",
