--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "nx": "nx",
     "start": "nx serve",
     "build": "nx build",
+    "build:browser-extension": "nx build browser-extension && npm run copy-ext-manifest",
+    "copy-ext-manifest": "cp apps/browser-extension/manifest.json dist/apps/browser-extension",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint && nx lint api",
     "e2e": "nx e2e",
@@ -95,6 +97,7 @@
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "babel-jest": "26.2.2",
+    "copy-webpack-plugin": "^6.0.3",
     "cypress": "^6.0.1",
     "dotenv": "8.2.0",
     "eslint": "7.10.0",
@@ -108,7 +111,8 @@
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "webpack-extension-reloader": "^1.1.4"
   },
   "release": {
     "branches": [
