--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -8,14 +8,14 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"]
+      "js": ["polyfills.js", "content.js"]
     }
   ],
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["polyfills.js", "background.js"],
     "persistent": true
   },
   "permissions": ["storage", "<all_urls>"],
-  "web_accessible_resources": ["content.js"],
+  "web_accessible_resources": ["polyfills.js", "content.js"],
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
