--- a/package.json
+++ b/package.json
@@ -34,12 +34,18 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.14",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^5.0.0-alpha.29",
     "@material-ui/icons": "^5.0.0-alpha.28",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^5.0.0-alpha.29",
     "@tshio/security-client": "^0.0.20",
+    "apollo-link-rest": "^0.8.0-beta.0",
     "apollo-server-fastify": "3.0.0-alpha.3",
     "awilix": "^4.3.3",
+    "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "emittery": "^0.7.2",
@@ -47,9 +53,16 @@
     "fastify-cors": "^0.2.0",
     "functional-cqrs": "^1.2.3",
     "graphql": "^15.5.0",
+    "graphql-anywhere": "^4.2.7",
+    "graphql-tag": "^2.12.3",
+    "joiful": "^3.0.0",
+    "lodash.mapvalues": "^4.6.0",
     "pg": "^8.5.1",
+    "qs": "^6.5.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-easy-emoji": "^1.4.0",
+    "react-hook-form": "^7.0.3",
     "regenerator-runtime": "0.13.7",
     "scheduler": "^0.20.2",
     "tslib": "^2.0.0",
@@ -89,8 +102,10 @@
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.5",
     "@testing-library/react": "11.1.2",
+    "@testing-library/user-event": "^13.1.1",
     "@types/express": "4.17.0",
     "@types/jest": "26.0.8",
+    "@types/lodash.mapvalues": "^4.6.6",
     "@types/node": "14.14.33",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
