--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "root": true,
   "ignorePatterns": ["**/*", "libs/shared/schema/src/types.ts"],
+  "extends": ["plugin:@nrwl/nx/react"],
   "plugins": ["@nrwl/nx"],
   "overrides": [
     {
