--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "nx build",
     "build:browser-extension": "nx build browser-extension && npm run copy-ext-manifest",
     "copy-ext-manifest": "cp apps/browser-extension/manifest.json dist/apps/browser-extension",
-    "test": "nx run-many --all --target=test",
+    "test": "jest",
     "lint": "nx workspace-lint && nx lint && nx lint api",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
@@ -55,7 +55,9 @@
     "graphql": "^15.5.0",
     "graphql-anywhere": "^4.2.7",
     "graphql-tag": "^2.12.3",
+    "http-status-codes": "^2.1.4",
     "joiful": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash.mapvalues": "^4.6.0",
     "pg": "^8.5.1",
     "qs": "^6.5.2",
@@ -63,11 +65,13 @@
     "react-dom": "17.0.1",
     "react-easy-emoji": "^1.4.0",
     "react-hook-form": "^7.0.3",
+    "react-router-dom": "^5.2.0",
     "regenerator-runtime": "0.13.7",
     "scheduler": "^0.20.2",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.32",
     "use-context-selector": "^1.3.7",
+    "uuid": "^3.4.0",
     "zustand": "^3.3.3"
   },
   "devDependencies": {
@@ -109,6 +113,8 @@
     "@types/node": "14.14.33",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "babel-jest": "26.2.2",
