--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@testing-library/react": "11.1.2",
     "@testing-library/user-event": "^13.1.1",
     "@types/express": "4.17.0",
+    "@types/faker": "^5.5.0",
     "@types/jest": "26.0.8",
     "@types/lodash.mapvalues": "^4.6.6",
     "@types/node": "14.14.33",
@@ -128,6 +129,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
+    "faker": "^5.5.2",
     "jest": "26.2.2",
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
