--- a/nx.json
+++ b/nx.json
@@ -47,6 +47,7 @@
     "shared-backend-domain-auth": { "tags": [] },
     "shared-errors": { "tags": [] },
     "shared-backend-domain-user": { "tags": [] },
-    "shared-backend-base-model": { "tags": [] }
+    "shared-backend-base-model": { "tags": [] },
+    "shared-domain-user": { "tags": [] }
   }
 }
