--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,6 +50,12 @@ jobs:
         with:
           node-version: 15.x
 
+      - name: Start docker
+        run: docker-compose up -d
+
+      - name: Setup env
+        run: cp .local.env.dist .local.env
+
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
