--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "17.0.1",
     "react-easy-emoji": "^1.4.0",
     "react-hook-form": "^7.0.3",
+    "react-infinite-scroll-component": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "0.13.7",
     "scheduler": "^0.20.2",
