--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -73,6 +73,9 @@
       ],
       "@scrapper-gate/shared/domain/user": [
         "libs/shared/domain/user/src/index.ts"
+      ],
+      "@scrapper-gate/shared-frontend/api-client": [
+        "libs/shared-frontend/api-client/src/index.ts"
       ]
     }
   },
