--- a/libs/shared-frontend/ui/.eslintrc.json
+++ b/libs/shared-frontend/ui/.eslintrc.json
@@ -5,7 +5,7 @@
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
-        "project": ["libs/shared-frontend/ui/tsconfig.*?.json"]
+        "project": ["tsconfig.*?.json", ".storybook/tsconfig.json"]
       },
       "rules": {}
     },
