--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@nrwl/node": "11.6.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "11.6.1",
+    "@nrwl/storybook": "^11.6.1",
     "@nrwl/tao": "11.6.1",
     "@nrwl/web": "11.6.1",
     "@nrwl/workspace": "11.6.1",
@@ -106,6 +107,10 @@
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.5",
+    "@storybook/addon-docs": "^6.2.7",
+    "@storybook/addon-knobs": "^6.1.11",
+    "@storybook/react": "^6.1.11",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "11.1.2",
     "@testing-library/user-event": "^13.1.1",
     "@types/express": "4.17.0",
@@ -117,9 +122,11 @@
     "@types/react-dom": "16.9.9",
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
+    "@types/webpack": "4.41.21",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "babel-jest": "26.2.2",
+    "babel-loader": "8.1.0",
     "copy-webpack-plugin": "^6.0.3",
     "cypress": "^6.0.1",
     "dotenv": "8.2.0",
@@ -135,7 +142,9 @@
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.2.3",
+    "url-loader": "^3.0.0",
     "webpack-extension-reloader": "^1.1.4"
   },
   "release": {
