--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "joiful": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.mapvalues": "^4.6.0",
+    "notistack": "^1.0.5",
     "pg": "^8.5.1",
     "qs": "^6.5.2",
     "react": "17.0.1",
@@ -67,6 +68,7 @@
     "react-hook-form": "^7.0.3",
     "react-infinite-scroll-component": "^6.0.0",
     "react-router-dom": "^5.2.0",
+    "react-use": "^17.2.3",
     "regenerator-runtime": "0.13.7",
     "scheduler": "^0.20.2",
     "tslib": "^2.0.0",
