--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-router-dom": "^5.2.0",
     "react-use": "^17.2.3",
     "regenerator-runtime": "0.13.7",
+    "remeda": "^0.0.27",
     "scheduler": "^0.20.2",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.32",
@@ -109,6 +110,7 @@
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.0",
     "@semantic-release/npm": "^7.0.5",
+    "@storybook/addon-actions": "^6.2.7",
     "@storybook/addon-docs": "^6.2.7",
     "@storybook/addon-knobs": "^6.1.11",
     "@storybook/react": "^6.1.11",
