chore: Add dialogs

--- a/nx.json
+++ b/nx.json
@@ -49,6 +49,7 @@
     "shared-backend-domain-user": { "tags": [] },
     "shared-backend-base-model": { "tags": [] },
     "shared-domain-user": { "tags": [] },
-    "shared-frontend-api-client": { "tags": [] }
+    "shared-frontend-api-client": { "tags": [] },
+    "shared-frontend-dialogs": { "tags": [] }
   }
 }
