--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "@storybook/react": "^6.1.11",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "11.1.2",
+    "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^13.1.1",
     "@types/express": "4.17.0",
     "@types/faker": "^5.5.0",
