--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -76,6 +76,9 @@
       ],
       "@scrapper-gate/shared-frontend/api-client": [
         "libs/shared-frontend/api-client/src/index.ts"
+      ],
+      "@scrapper-gate/shared-frontend/dialogs": [
+        "libs/shared-frontend/dialogs/src/index.ts"
       ]
     }
   },
