--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.14",
+    "@emotion/cache": "^11.1.3",
+    "@emotion/core": "^10.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
@@ -62,20 +64,24 @@
     "notistack": "^1.0.5",
     "pg": "^8.5.1",
     "qs": "^6.5.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-easy-emoji": "^1.4.0",
     "react-hook-form": "^7.0.3",
     "react-infinite-scroll-component": "^6.0.0",
     "react-router-dom": "^5.2.0",
+    "react-shadow": "^19.0.2",
     "react-use": "^17.2.3",
     "regenerator-runtime": "0.13.7",
     "remeda": "^0.0.27",
     "scheduler": "^0.20.2",
+    "tinycolor2": "^1.4.2",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.32",
     "use-context-selector": "^1.3.7",
+    "use-query-params": "^1.2.2",
     "uuid": "^3.4.0",
+    "webextension-polyfill-ts": "^0.25.0",
     "zustand": "^3.3.3"
   },
   "devDependencies": {
@@ -118,14 +124,16 @@
     "@testing-library/react": "11.1.2",
     "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^13.1.1",
+    "@types/chrome": "^0.0.134",
     "@types/express": "4.17.0",
     "@types/faker": "^5.5.0",
     "@types/jest": "26.0.8",
     "@types/lodash.mapvalues": "^4.6.6",
     "@types/node": "14.14.33",
-    "@types/react": "16.9.56",
-    "@types/react-dom": "16.9.9",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/tinycolor2": "^1.4.2",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "4.41.21",
     "@typescript-eslint/eslint-plugin": "4.3.0",
@@ -144,6 +152,8 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "faker": "^5.5.2",
     "jest": "26.2.2",
+    "mockzilla": "^0.9.0",
+    "mockzilla-webextension": "^0.9.0",
     "prettier": "2.2.1",
     "ts-jest": "26.4.0",
     "ts-node": "~9.1.1",
