--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "graphql": "^15.5.0",
     "graphql-anywhere": "^4.2.7",
     "graphql-tag": "^2.12.3",
+    "graphql-tools": "^4.0.8",
     "http-status-codes": "^2.1.4",
     "joiful": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
