feat(browser-extension): Add drawer

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "notistack": "^1.0.5",
     "pg": "^8.5.1",
     "qs": "^6.5.2",
+    "query-string": "^7.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-easy-emoji": "^1.4.0",
@@ -99,19 +100,19 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@nrwl/cli": "11.6.1",
-    "@nrwl/cypress": "11.6.1",
-    "@nrwl/eslint-plugin-nx": "11.6.1",
-    "@nrwl/express": "11.6.1",
-    "@nrwl/jest": "11.6.1",
-    "@nrwl/linter": "11.6.1",
-    "@nrwl/node": "11.6.1",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "11.6.1",
-    "@nrwl/storybook": "^11.6.1",
-    "@nrwl/tao": "11.6.1",
-    "@nrwl/web": "11.6.1",
-    "@nrwl/workspace": "11.6.1",
+    "@nrwl/cli": "12.0.7",
+    "@nrwl/cypress": "12.0.7",
+    "@nrwl/eslint-plugin-nx": "12.0.7",
+    "@nrwl/express": "12.0.7",
+    "@nrwl/jest": "12.0.7",
+    "@nrwl/linter": "12.0.7",
+    "@nrwl/node": "12.0.7",
+    "@nrwl/nx-cloud": "11.2.0",
+    "@nrwl/react": "12.0.7",
+    "@nrwl/storybook": "12.0.7",
+    "@nrwl/tao": "12.0.7",
+    "@nrwl/web": "12.0.7",
+    "@nrwl/workspace": "12.0.7",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
@@ -161,6 +162,7 @@
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.2.3",
     "url-loader": "^3.0.0",
+    "webpack": "4.46.0",
     "webpack-extension-reloader": "^1.1.4"
   },
   "release": {
