--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -69,7 +69,10 @@
       "@scrapper-gate/shared/run-states": [
         "libs/shared/run-states/src/index.ts"
       ],
-      "@scrapper-gate/backend/db-utils": ["libs/backend/db-utils/src/index.ts"]
+      "@scrapper-gate/backend/db-utils": ["libs/backend/db-utils/src/index.ts"],
+      "@scrapper-gate/frontend/domain/user": [
+        "libs/frontend/domain/user/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
