--- a/nx.json
+++ b/nx.json
@@ -54,6 +54,7 @@
     "frontend-domain-scrapper": { "tags": [] },
     "backend-domain-scrapper": { "tags": [] },
     "shared-run-states": { "tags": [] },
-    "backend-db-utils": { "tags": [] }
+    "backend-db-utils": { "tags": [] },
+    "frontend-domain-user": { "tags": [] }
   }
 }
