--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["polyfills.js", "content.js"]
+      "js": ["polyfills.js", "content.js", "app-Content-contentRoot.js"]
     }
   ],
   "background": {
@@ -16,6 +16,6 @@
     "persistent": true
   },
   "permissions": ["storage", "<all_urls>"],
-  "web_accessible_resources": ["polyfills.js", "content.js"],
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "web_accessible_resources": ["*.js", "*.json", "*.map"],
+  "content_security_policy": "script-src 'self' blob: filesystem: 'unsafe-eval';"
 }
