--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "nx": "nx",
     "start": "nx serve",
-    "build": "nx build",
-    "build:browser-extension": "nx build browser-extension && npm run copy-ext-manifest",
-    "copy-ext-manifest": "cp apps/browser-extension/manifest.json dist/apps/browser-extension",
+    "build": "nx build --prod",
     "test": "jest",
     "lint": "nx workspace-lint && nx lint && nx lint api",
     "e2e": "nx e2e",
@@ -35,7 +33,9 @@
   "dependencies": {
     "@apollo/client": "^3.3.14",
     "@emotion/cache": "^11.1.3",
-    "@emotion/core": "^10.1.1",
+    "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.1.3",
+    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
@@ -163,7 +163,8 @@
     "typescript": "^4.2.3",
     "url-loader": "^3.0.0",
     "webpack": "4.46.0",
-    "webpack-extension-reloader": "^1.1.4"
+    "webpack-extension-reloader": "^1.1.4",
+    "webpack-target-webextension": "^0.4.0"
   },
   "release": {
     "branches": [
