--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -8,7 +8,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["polyfills.js", "content.js", "app-Content-contentRoot.js"]
+      "js": ["polyfills.js", "content.js"]
     }
   ],
   "background": {
