--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Scrapper Gate",
   "version": "0.0.1",
-  "manifest_version": 2,
-  "browser_action": {
+  "manifest_version": 3,
+  "action": {
     "default_popup": "index.html#/popup"
   },
   "content_scripts": [
@@ -12,10 +12,25 @@
     }
   ],
   "background": {
-    "scripts": ["polyfills.js", "background.js"],
-    "persistent": true
+    "service_worker": "background.js"
   },
-  "permissions": ["storage", "<all_urls>"],
-  "web_accessible_resources": ["*.js", "*.json", "*.map"],
-  "content_security_policy": "script-src 'self' blob: filesystem: 'unsafe-eval';"
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
+  "permissions": [
+    "unlimitedStorage",
+    "storage",
+    "tabs",
+    "activeTab",
+    "browsingData",
+    "background",
+    "scripting"
+  ],
+  "host_permissions": ["*://*/*"],
+  "web_accessible_resources": [
+    {
+      "resources": ["*.js", "*.json", "*.map"],
+      "matches": ["*://*/*"]
+    }
+  ]
 }
