--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@storybook/addon-knobs": "^6.1.11",
     "@storybook/react": "^6.1.11",
     "@svgr/webpack": "^5.4.0",
+    "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "11.1.2",
     "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^13.1.1",
