chore: Add initial FlowBuilder from old app

--- a/nx.json
+++ b/nx.json
@@ -57,6 +57,7 @@
     "backend-db-utils": { "tags": [] },
     "frontend-domain-user": { "tags": [] },
     "frontend-logger": { "tags": [] },
-    "shared-domain-scrapper": { "tags": [] }
+    "shared-domain-scrapper": { "tags": [] },
+    "frontend-keyboard-shortcuts": { "tags": [] }
   }
 }
