--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^5.0.0-alpha.30",
+    "@theunderscorer/when": "^1.0.1",
     "@tshio/security-client": "^0.0.20",
     "apollo-link-rest": "^0.8.0-beta.0",
     "apollo-server-fastify": "3.0.0-alpha.3",
     "awilix": "^4.3.3",
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
+    "dagre": "^0.8.5",
     "document-register-element": "1.13.1",
     "emittery": "^0.7.2",
     "fastify": "^3.14.1",
@@ -68,9 +70,13 @@
     "qs": "^6.5.2",
     "query-string": "^7.0.0",
     "react": "17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
     "react-easy-emoji": "^1.4.0",
+    "react-flow-renderer": "^9.5.1",
     "react-hook-form": "^7.0.3",
+    "react-hotkeys-hook": "^3.3.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-router-dom": "^5.2.0",
     "react-shadow": "^19.0.2",
@@ -130,6 +136,7 @@
     "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^13.1.1",
     "@types/chrome": "^0.0.134",
+    "@types/dagre": "^0.7.44",
     "@types/express": "4.17.0",
     "@types/faker": "^5.5.0",
     "@types/jest": "26.0.8",
