--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
+    "@hookform/devtools": "^3.0.0-rc.2",
     "@nrwl/cli": "12.0.8",
     "@nrwl/cypress": "12.0.8",
     "@nrwl/eslint-plugin-nx": "12.0.8",
