--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "emittery": "^0.7.2",
     "fastify": "^3.14.1",
     "fastify-cors": "^0.2.0",
+    "final-form": "^4.20.2",
     "functional-cqrs": "^1.2.3",
     "graphql": "^15.5.0",
     "graphql-anywhere": "^4.2.7",
@@ -74,6 +75,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
     "react-easy-emoji": "^1.4.0",
+    "react-final-form": "^6.5.3",
     "react-flow-renderer": "^9.5.1",
     "react-hook-form": "^7.2.3",
     "react-hotkeys-hook": "^3.3.0",
