--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "http-status-codes": "^2.1.4",
     "joiful": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash.get": "^4.4.2",
     "lodash.mapvalues": "^4.6.0",
+    "lodash.set": "^4.3.2",
     "notistack": "^1.0.5",
     "pg": "^8.5.1",
     "qs": "^6.5.2",
@@ -77,7 +79,6 @@
     "react-easy-emoji": "^1.4.0",
     "react-final-form": "^6.5.3",
     "react-flow-renderer": "^9.5.1",
-    "react-hook-form": "^7.2.3",
     "react-hotkeys-hook": "^3.3.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-router-dom": "^5.2.0",
@@ -110,7 +111,6 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@hookform/devtools": "^3.0.0-rc.2",
     "@nrwl/cli": "12.0.8",
     "@nrwl/cypress": "12.0.8",
     "@nrwl/eslint-plugin-nx": "12.0.8",
@@ -143,7 +143,9 @@
     "@types/express": "4.17.0",
     "@types/faker": "^5.5.0",
     "@types/jest": "26.0.8",
+    "@types/lodash.get": "^4.4.6",
     "@types/lodash.mapvalues": "^4.6.6",
+    "@types/lodash.set": "^4.3.6",
     "@types/node": "14.14.33",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3",
