--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "pg": "^8.5.1",
     "qs": "^6.5.2",
     "query-string": "^7.0.0",
+    "re-resizable": "^6.9.0",
     "react": "17.0.2",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
