--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "scheduler": "^0.20.2",
     "tinycolor2": "^1.4.2",
     "tslib": "^2.0.0",
+    "type-fest": "^1.0.2",
     "typeorm": "^0.2.32",
     "use-context-selector": "^1.3.7",
     "use-query-params": "^1.2.2",
