chore: Add HTMLElementPicker

--- a/nx.json
+++ b/nx.json
@@ -58,6 +58,7 @@
     "frontend-domain-user": { "tags": [] },
     "frontend-logger": { "tags": [] },
     "shared-domain-scrapper": { "tags": [] },
-    "frontend-keyboard-shortcuts": { "tags": [] }
+    "frontend-keyboard-shortcuts": { "tags": [] },
+    "frontend-html-picker": { "tags": [] }
   }
 }
