--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "tslib": "^2.0.0",
     "type-fest": "^1.0.2",
     "typeorm": "^0.2.32",
+    "unique-selector": "^0.5.0",
     "use-context-selector": "^1.3.7",
     "use-query-params": "^1.2.2",
     "uuid": "^3.4.0",
