--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "remeda": "^0.0.27",
     "scheduler": "^0.20.2",
     "tinycolor2": "^1.4.2",
+    "ts-key-enum": "^2.0.7",
     "tslib": "^2.0.0",
     "type-fest": "^1.0.2",
     "typeorm": "^0.2.32",
