--- a/package.json
+++ b/package.json
@@ -157,18 +157,19 @@
     "@types/tinycolor2": "^1.4.2",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "4.41.21",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "babel-jest": "26.2.2",
     "babel-loader": "8.1.0",
     "copy-webpack-plugin": "^6.0.3",
     "cypress": "^6.0.1",
     "dotenv": "8.2.0",
-    "eslint": "7.10.0",
+    "eslint": "^7.25.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0",
     "faker": "^5.5.2",
