--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,5 +2,6 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "module": "CommonJS"
-  }
+  },
+  "exclude": ["node_modules", "tmp"]
 }
