--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "nx build --prod",
     "watch:browser-extension": "nx serve --prod",
     "test": "jest",
-    "lint": "nx workspace-lint && nx lint && nx lint api",
+    "lint": "nx run-many --target=lint --all --parallel --maxParallel=4",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
@@ -157,8 +157,8 @@
     "@types/tinycolor2": "^1.4.2",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "4.41.21",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-jest": "26.2.2",
     "babel-loader": "8.1.0",
     "copy-webpack-plugin": "^6.0.3",
