--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "dagre": "^0.8.5",
+    "deepmerge": "^4.2.2",
     "document-register-element": "1.13.1",
     "emittery": "^0.7.2",
     "fastify": "^3.14.1",
@@ -62,12 +63,14 @@
     "graphql-tag": "^2.12.3",
     "graphql-tools": "^4.0.8",
     "http-status-codes": "^2.1.4",
-    "joiful": "^3.0.0",
+    "joiful": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
     "lodash.get": "^4.4.2",
+    "lodash.isempty": "^4.4.0",
     "lodash.mapvalues": "^4.6.0",
     "lodash.set": "^4.3.2",
     "notistack": "^1.0.5",
+    "p-limit": "^3.1.0",
     "pg": "^8.5.1",
     "qs": "^6.5.2",
     "query-string": "^7.0.0",
@@ -148,6 +151,7 @@
     "@types/faker": "^5.5.0",
     "@types/jest": "26.0.8",
     "@types/lodash.get": "^4.4.6",
+    "@types/lodash.isempty": "^4.4.6",
     "@types/lodash.mapvalues": "^4.6.6",
     "@types/lodash.set": "^4.3.6",
     "@types/node": "14.14.33",
