--- a/codegen.yml
+++ b/codegen.yml
@@ -24,6 +24,10 @@ generates:
     config:
       skipTypename: true
       maybeValue: T | undefined
+      scalars:
+        Date: Date
+        WhatValue: WhatValue
+        ConditionalRuleValue: ConditionalRuleValue
     hooks:
       afterOneFileWrite:
         - prettier --write
@@ -31,6 +35,8 @@ generates:
       - typescript
       - typescript-operations
       - typescript-resolvers
+      - add:
+          content: "import {WhatValue, ConditionalRuleValue} from './scalars'"
 
   ./libs/frontend/schema/src/gql.tsx:
     preset: import-types
