--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.14",
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/cache": "^11.1.3",
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.1.3",
@@ -42,6 +43,7 @@
     "@material-ui/core": "^5.0.0-alpha.30",
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^5.0.0-alpha.30",
     "@theunderscorer/when": "^1.0.1",
     "@tshio/security-client": "^0.0.20",
@@ -51,6 +53,7 @@
     "classnames": "^2.3.1",
     "core-js": "^3.6.5",
     "dagre": "^0.8.5",
+    "date-fns": "^2.21.3",
     "deepmerge": "^4.2.2",
     "document-register-element": "1.13.1",
     "emittery": "^0.7.2",
@@ -65,8 +68,10 @@
     "http-status-codes": "^2.1.4",
     "joiful": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash.capitalize": "^4.2.1",
     "lodash.get": "^4.4.2",
     "lodash.isempty": "^4.4.0",
+    "lodash.lowercase": "^4.3.0",
     "lodash.mapvalues": "^4.6.0",
     "lodash.set": "^4.3.2",
     "notistack": "^1.0.5",
@@ -111,7 +116,7 @@
     "@babel/preset-typescript": "7.9.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
-    "@graphql-codegen/add": "2.0.2",
+    "@graphql-codegen/add": "^2.0.2",
     "@graphql-codegen/cli": "1.21.3",
     "@graphql-codegen/import-types-preset": "1.18.1",
     "@graphql-codegen/typescript": "1.21.1",
@@ -150,8 +155,10 @@
     "@types/express": "4.17.0",
     "@types/faker": "^5.5.0",
     "@types/jest": "26.0.8",
+    "@types/lodash.capitalize": "^4.2.6",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.isempty": "^4.4.6",
+    "@types/lodash.lowercase": "^4.3.6",
     "@types/lodash.mapvalues": "^4.6.6",
     "@types/lodash.set": "^4.3.6",
     "@types/node": "14.14.33",
