test: Add tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
               }
             ]
           }
-        ]
+        ],
+        "jsx-a11y/accessible-emoji": "off"
       }
     },
     {
