chore: Store emojis in theme

--- a/nx.json
+++ b/nx.json
@@ -62,6 +62,7 @@
     "frontend-html-picker": { "tags": [] },
     "shared-constructor": { "tags": [] },
     "shared-domain-conditional-rules": { "tags": [] },
-    "frontend-domain-conditional-rules": { "tags": [] }
+    "frontend-domain-conditional-rules": { "tags": [] },
+    "frontend-snackbars": { "tags": [] }
   }
 }
