--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "emittery": "^0.7.2",
     "fastify": "^3.14.1",
     "fastify-cors": "^0.2.0",
-    "final-form": "^4.20.2",
+    "final-form": "4.20.1",
     "functional-cqrs": "^1.2.3",
     "graphql": "^15.5.0",
     "graphql-anywhere": "^4.2.7",
@@ -123,19 +123,19 @@
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "2.2.3",
     "@graphql-codegen/typescript-resolvers": "1.19.0",
-    "@nrwl/cli": "12.0.8",
-    "@nrwl/cypress": "12.0.8",
-    "@nrwl/eslint-plugin-nx": "12.0.8",
-    "@nrwl/express": "12.0.8",
-    "@nrwl/jest": "12.0.8",
-    "@nrwl/linter": "12.0.8",
-    "@nrwl/node": "12.0.8",
-    "@nrwl/nx-cloud": "11.2.0",
-    "@nrwl/react": "12.0.8",
-    "@nrwl/storybook": "12.0.8",
-    "@nrwl/tao": "12.0.8",
-    "@nrwl/web": "12.0.8",
-    "@nrwl/workspace": "12.0.8",
+    "@nrwl/cli": "12.2.0",
+    "@nrwl/cypress": "12.2.0",
+    "@nrwl/eslint-plugin-nx": "12.2.0",
+    "@nrwl/express": "12.2.0",
+    "@nrwl/jest": "12.2.0",
+    "@nrwl/linter": "12.2.0",
+    "@nrwl/node": "12.2.0",
+    "@nrwl/nx-cloud": "12.0.2",
+    "@nrwl/react": "12.2.0",
+    "@nrwl/storybook": "12.2.0",
+    "@nrwl/tao": "12.2.0",
+    "@nrwl/web": "12.2.0",
+    "@nrwl/workspace": "12.2.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
@@ -188,7 +188,7 @@
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
     "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "ts-jest": "26.5.5",
     "ts-node": "~9.1.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^4.2.4",
