--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "notistack": "^1.0.5",
     "p-limit": "^3.1.0",
     "pg": "^8.5.1",
+    "playwright": "^1.11.0",
     "qs": "^6.5.2",
     "query-string": "^7.0.0",
     "re-resizable": "^6.9.0",
