--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 15.x
+          node-version: 16.x
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
@@ -30,10 +30,10 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Set Node.js 13.x
+      - name: Set Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: 15.x
+          node-version: 16.x
 
       - name: Configure CI Git User
         run: |
@@ -56,10 +56,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set Node.js 13.x
+      - name: Set Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: 15.x
+          node-version: 16.x
+
+      - uses: microsoft/playwright-github-action@v1
 
       - name: Start docker
         run: docker-compose up -d
