--- a/.local.env.dist
+++ b/.local.env.dist
@@ -29,3 +29,4 @@ AWS_SQS_MESSAGE_TEST_QUEUE_URL=http://localhost:9324/queue/MessageQueueTest.fifo
 AWS_SQS_API_VERSION=2012-11-05
 REDIS_HOST=localhost
 REDIS_PORT=6379
+IGNORED_BROWSER_TYPES=Firefox,Safari
