--- a/nx.json
+++ b/nx.json
@@ -152,6 +152,9 @@
     },
     "backend-perf-hooks-utils": {
       "tags": []
+    },
+    "backend-validation": {
+      "tags": []
     }
   }
 }
