feat: Resolve variables

--- a/nx.json
+++ b/nx.json
@@ -155,6 +155,9 @@
     },
     "backend-validation": {
       "tags": []
+    },
+    "shared-domain-variables": {
+      "tags": []
     }
   }
 }
