feat: Add variable text field component

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -111,7 +111,10 @@
       "@scrapper-gate/backend/domain/variables": [
         "libs/backend/domain/variables/src/index.ts"
       ],
-      "@scrapper-gate/backend/crud": ["libs/backend/crud/src/index.ts"]
+      "@scrapper-gate/backend/crud": ["libs/backend/crud/src/index.ts"],
+      "@scrapper-gate/frontend/domain/variables": [
+        "libs/frontend/domain/variables/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
