--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^5.0.0-alpha.30",
-    "@material-ui/icons": "^5.0.0-alpha.28",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/core": "^5.0.0-alpha.34",
+    "@material-ui/icons": "^5.0.0-alpha.29",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
-    "@material-ui/styles": "^5.0.0-alpha.30",
+    "@material-ui/styles": "^5.0.0-alpha.33",
     "@theunderscorer/when": "^1.0.1",
     "@tshio/security-client": "^0.0.20",
     "apollo-link-rest": "^0.8.0-beta.0",
@@ -56,6 +56,7 @@
     "date-fns": "^2.21.3",
     "deepmerge": "^4.2.2",
     "document-register-element": "1.13.1",
+    "draft-js": "^0.11.7",
     "emittery": "^0.7.2",
     "fastify": "^3.14.1",
     "fastify-cors": "^0.2.0",
@@ -65,6 +66,7 @@
     "graphql-anywhere": "^4.2.7",
     "graphql-tag": "^2.12.3",
     "graphql-tools": "^4.0.8",
+    "highlight-words-core": "^1.2.2",
     "http-status-codes": "^2.1.4",
     "joiful": "^3.0.2",
     "jsonwebtoken": "^8.5.1",
@@ -82,6 +84,7 @@
     "query-string": "^7.0.0",
     "re-resizable": "^6.9.0",
     "react": "17.0.2",
+    "react-contenteditable": "^3.3.5",
     "react-dnd": "^14.0.2",
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "17.0.2",
@@ -153,8 +156,10 @@
     "@testing-library/user-event": "^13.1.1",
     "@types/chrome": "^0.0.134",
     "@types/dagre": "^0.7.44",
+    "@types/draft-js": "^0.11.3",
     "@types/express": "4.17.0",
     "@types/faker": "^5.5.0",
+    "@types/highlight-words-core": "^1.2.0",
     "@types/jest": "26.0.8",
     "@types/lodash.capitalize": "^4.2.6",
     "@types/lodash.get": "^4.4.6",
