--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "help": "nx help",
     "gql-codegen": "graphql-codegen --config codegen.yml",
     "ts-node-dev": "TS_NODE_PROJECT=tsconfig.node.json ts-node-dev -r tsconfig-paths/register",
+    "ts-node": "TS_NODE_PROJECT=tsconfig.node.json ts-node -r tsconfig-paths/register",
+    "gather-projects": "npm run ts-node tools/scripts/gatherProjects.ts --",
     "release": "npx semantic-release",
     "release:dry": "npx semantic-release -d"
   },
@@ -192,6 +194,7 @@
     "faker": "^5.5.2",
     "jest": "26.2.2",
     "jest-mock-proxy": "^3.0.0",
+    "matcher": "^4.0.0",
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
     "prettier": "2.2.1",
