--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -68,7 +68,7 @@ jobs:
         run: cp .local.env.dist .local.env
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci --legacy-peer-deps && npm i ts-node -g
 
       - name: Test
         run: |
@@ -103,7 +103,7 @@ jobs:
         run: cp .local.env.dist .local.env
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci --legacy-peer-deps && npm i ts-node -g
 
       - name: Test
         run: |
@@ -129,7 +129,7 @@ jobs:
         run: cp .local.env.dist .local.env
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps
+        run: npm ci --legacy-peer-deps && npm i ts-node -g
 
       - name: Test
         run: |
