--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -137,4 +137,27 @@ jobs:
           echo "$PROJECTS"
           npx nx run-many --target=test --projects=$PROJECTS --parallel --maxParallel=2
 
+  test-apps:
+    name: Run apps tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set Node.js 16.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - name: Start docker
+        run: docker-compose up -d
+
+      - name: Setup env
+        run: cp .local.env.dist .local.env
+
+      - name: Install dependencies
+        run: npm ci --legacy-peer-deps && npm i ts-node -g
+
+      - name: Test
+        run: npx nx run-many --target=test --projects=api,browser-extension --parallel --maxParallel=2
+
 
